Rectification du fichier html de l'exo 3
Une balide fermante </strong> a été déplacée et mise au bon endroit.

--- a/exo3.html
+++ b/exo3.html
@@ -143,7 +143,7 @@
                 <label for="metroidvaniaInput"><strong>Metroivania</strong> (Ori and the Blind forest, Hollow Knight, Dead Cells...)</label><br>
                 
                 <input type="checkbox" id="familialInput" name="familialInput" value="familial">
-                <label for="familialInput"><strong>Jeu familial</strong> / coopération (It Takes Two, Overcooked, Moving Out...)</label><br>
+                <label for="familialInput"><strong>Jeu familial / coopération</strong> (It Takes Two, Overcooked, Moving Out...)</label><br>
 
                 <input type="checkbox" id="sportInput" name="sportInput" value="sport">
                 <label for="sportInput"><strong>Sport</strong> (Forza Horizon 5, FIFA 23, NBA 23...)</label><br>
